--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.5);
   --switch-bg-url: url(./img/ligth.svg);
+  --br-image: linear-gradient(black,
+    rgba(63, 63, 192, 0.791),
+    rgba(78, 6, 186, 0.386))
   --bord-border: rgba(0, 0, 0, 0.452);
 }
 
@@ -37,11 +40,9 @@ body *{
 }
 
 #container {
-  background-image: linear-gradient(black,
-    rgba(63, 63, 192, 0.791),
-    rgba(78, 6, 186, 0.386));
+  background-image: var(--br-image);
   border: 2.5px solid var(--bord-border);
-  width: 100%;
+  width: 90%;
   max-width: 560px;
   height: 750px;
   padding: 15px;
